# prompthound

./: .gitignore  AGENTS.md  README.md  benchmark_report.md  conftest.py  model_selection.md  patch2.py  patch_benchmark.py  patch_classifier.py  patch_import.py  patch_promote.py  patch_recursive.py  patch_run_benchmark.py  patch_scan.py  patch_scan2.py  patch_walkthrough.py  pyproject.toml  quickstart.bat  scan_benign_rules.py  skills-lock.json  streamlit_app.py
.agents/: AGENTS.md  project_specifications.md
.agents/skills/: developing-with-streamlit
benchmark/: import_corpus.py  models.yaml  promote.py  run_benchmark.py
benchmark/corpus/: labels.csv  yoonholee.jsonl
benchmark/results/: deferred_decisions.md
data/: features.npz  models.yaml
data/benchmarks/: Stable_random_forest_f1_75.md  comparison.json
dataset/: analyze-gt.py
dataset/case_00008/: SKILL.md
dataset/case_00009/: SKILL.md
dataset/case_00010/: SKILL.md
dataset/case_00012/: SKILL.md
dataset/case_00013/: SKILL.md
dataset/case_00014/: SKILL.md
dataset/case_00015/: SKILL.md
dataset/case_00018/: SKILL.md
dataset/case_00020/: SKILL.md
dataset/case_00026/: SKILL.md
dataset/case_00031/: SKILL.md
dataset/case_00032/: SKILL.md
docs/: architecture.md  concept.md  evaluation_report.md  submission_materials.md  tech-implementation.md
prompthound/: README.md  __init__.py  app.py  benchmark.py  benchmark_report.md  chains.py  cli.py  error_analysis.py  extract_data.py  features.npz  features.py  flatten.py  model_selection.md  models.yaml  parse.py  pyproject.toml  report.py  schema.py  train.py
prompthound/classifier/: __init__.py  model.py  train.py
prompthound/classifier/artifact/: metadata.json  model.joblib
prompthound/hooks/: pre-commit
prompthound/rules/: __init__.py  encoded_blob.py  padding.py  shell_pipe.py  suspicious_domain.py  unicode_tag.py
prompthound/scripts/: install_hooks.sh
prompthound/src/prompthound/: capability_chain.py  classifier.py  cli.py  features.py  flatten.py  limits.py  pipeline.py  reporter.py  rules.py
prompthound/src/prompthound.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompthound/tests/: test_flatten.py
scripts/: benchmark.py  benign_rule_hits_report.txt  compare.py  error_analysis.py  extract_data.py  flag_benign_rule_hits.py  install_hooks.sh  train.py
src/: app.py  app_utils.py
tests/: test_dilution.py  test_flatten.py
web/: app.py
(+8566 files in other folders)
