[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompthound"
version = "0.1.0"
description = "Static risk analysis CLI for AI agent skill files"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.8",
    "python-frontmatter==1.1.0",
    "markdown-it-py==3.0.0",
    "scikit-learn==1.5.2",
    "joblib==1.4.2",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.6",
]
lgbm = [
    "lightgbm==4.5.0",
]

[project.scripts]
prompthound = "prompthound.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompthound*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (use -m 'not slow' to skip)",
    "integration: marks integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = ["E501"]
