[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompthound"
version = "0.1.0"
description = "Static risk analysis for AI agent skill files"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"}
]
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0"
]
requires-python = ">=3.8"

[project.scripts]
prompthound = "prompthound.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
